# summa-polyexen

./: Cargo.toml
circuit/solvency/prover/src/: lib.rs
circuit/solvency/prover/src/chips/range/: tests.rs
circuit/solvency/prover/src/circuits/: univariate_grand_sum.rs
circuit/solvency/zk_prover/src/: lib.rs
circuit/solvency/zk_prover/src/chips/range/: tests.rs
circuit/solvency/zk_prover/src/circuits/: merkle_sum_tree.rs
src/: circuit.rs  main.rs
